# Automation_minutes

./: .env.template  .gitignore  LICENSE  README.md  REPORT.md  config.yaml  deploy.py  main.py  pyproject.toml
docs/: model_licenses.md
models/: README.md
scripts/: run_slurm.sh
src/: config.py  preprocess.py  summarize.py  summarize_gemini.py  transcribe.py
src/asr/: __init__.py  base.py  factory.py  faster_whisper_backend.py  parakeet_backend.py
src/summarizer/: __init__.py  base.py  factory.py  gemini.py  mlx_backend.py  mlx_vlm_backend.py  ollama_backend.py
tests/: test_pipeline.py
