[project]
name = "automation-minutes"
version = "0.2.0"
description = "Automated meeting transcription and minutes generation using Whisper and local/API LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "google-genai>=1.56.0",
    "huggingface-hub>=1.1.5",
    "mlx-lm>=0.19.0",
    "mlx-vlm>=0.1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
]
